--- a/major3.html
+++ b/major3.html
@@ -158,18 +158,18 @@
                 <div class="unit-content"><div class="unit-content-inner"><ul>
                     <li><a href="major3_unit1_topic1.html">Electric Field, Flux & Gauss's Law</a></li>
                     <li><a href="major3_unit1_topic2.html">Electrostatic Potential & Dipoles</a></li>
-                    <li><a href="core3_unit1_topic3.html">Laplace, Poisson & Uniqueness Theorem</a></li>
-                    <li><a href="core3_unit1_topic4.html">Method of Images</a></li>
-                    <li><a href="core3_unit1_topic5.html">Electrostatic Energy & Conductors</a></li>
+                    <li><a href="major3_unit1_topic3.html">Laplace, Poisson & Uniqueness Theorem</a></li>
+                    <li><a href="major3_unit1_topic4.html">Method of Images</a></li>
+                    <li><a href="major3_unit1_topic5.html">Electrostatic Energy & Conductors</a></li>
                 </ul></div></div>
             </div>
             <div class="unit-box">
                 <div class="unit-header"><h2>Unit 2: Magnetic Field</h2><i class="fas fa-chevron-down icon"></i></div>
                 <div class="unit-content"><div class="unit-content-inner"><ul>
-                    <li><a href="core3_unit2_topic1.html">Lorentz Force & Biot-Savart Law</a></li>
-                    <li><a href="core3_unit2_topic2.html">Ampere's Law & Applications</a></li>
-                    <li><a href="core3_unit2_topic3.html">Vector Potential</a></li>
-                    <li><a href="core3_unit2_topic4.html">Ballistic Galvanometer</a></li>
+                    <li><a href="major3_unit2_topic1.html">Lorentz Force & Biot-Savart Law</a></li>
+                    <li><a href="major3_unit2_topic2.html">Ampere's Law & Applications</a></li>
+                    <li><a href="major3_unit2_topic3.html">Vector Potential</a></li>
+                    <li><a href="major3_unit2_topic4.html">Ballistic Galvanometer</a></li>
                 </ul></div></div>
             </div>
             <div class="unit-box">
@@ -184,10 +184,10 @@
             <div class="unit-box">
                 <div class="unit-header"><h2>Unit 4: Electrical Circuits & Network Theorems</h2><i class="fas fa-chevron-down icon"></i></div>
                 <div class="unit-content"><div class="unit-content-inner"><ul>
-                    <li><a href="core3_unit4_topic1.html">AC Circuits & LCR Circuits</a></li>
-                    <li><a href="core3_unit4_topic2.html">Network Theorems (Thevenin, Norton)</a></li>
-                    <li><a href="core3_unit4_topic3.html">Network Theorems (Superposition, etc.)</a></li>
-                    <li><a href="core3_unit4_topic4.html">Transient Currents in RC & LR Circuits</a></li>
+                    <li><a href="major3_unit4_topic1.html">AC Circuits & LCR Circuits</a></li>
+                    <li><a href="major3_unit4_topic2.html">Network Theorems (Thevenin, Norton)</a></li>
+                    <li><a href="major3_unit4_topic3.html">Network Theorems (Superposition, etc.)</a></li>
+                    <li><a href="major3_unit4_topic4.html">Transient Currents in RC & LR Circuits</a></li>
                 </ul></div></div>
             </div>
         </div>
