--- a/major3.html
+++ b/major3.html
@@ -175,10 +175,10 @@
             <div class="unit-box">
                 <div class="unit-header"><h2>Unit 3: Matter & Electromagnetic Induction</h2><i class="fas fa-chevron-down icon"></i></div>
                 <div class="unit-content"><div class="unit-content-inner"><ul>
-                    <li><a href="core3_unit3_topic1.html">Dielectric Properties of Matter</a></li>
-                    <li><a href="core3_unit3_topic2.html">Magnetic Properties of Matter & Hysteresis</a></li>
-                    <li><a href="core3_unit3_topic3.html">Electromagnetic Induction & Inductance</a></li>
-                    <li><a href="core3_unit3_topic4.html">Introduction to Maxwell’s Equations</a></li>
+                    <li><a href="major3_unit3_topic1.html">Dielectric Properties of Matter</a></li>
+                    <li><a href="major3_unit3_topic2.html">Magnetic Properties of Matter & Hysteresis</a></li>
+                    <li><a href="major3_unit3_topic3.html">Electromagnetic Induction & Inductance</a></li>
+                    <li><a href="major3_unit3_topic4.html">Introduction to Maxwell’s Equations</a></li>
                 </ul></div></div>
             </div>
             <div class="unit-box">
