--- a/module2.html
+++ b/module2.html
@@ -400,8 +400,8 @@
 
     </main>
 
-    <footer>
-        <p>© 2024 IKS Question Bank | All the Best for Your Exams!</p>
+       <footer>
+        <p>© Pre-sem IKS | All the Best for Your Exams!</p>
         <p>Created by Pratyush Swain</p>
     </footer>
 
