--- a/module1.html
+++ b/module1.html
@@ -408,11 +408,11 @@
 
     </main>
 
-    <footer>
-        <p>© 2024 IKS Question Bank | All the Best for Your Exams!</p>
+      <footer>
+        <p>© Pre-sem IKS | All the Best for Your Exams!</p>
         <p>Created by Pratyush Swain</p>
     </footer>
-
+    
     <!-- JAVASCRIPT FOR TOGGLE BUTTONS & DARK MODE -->
     <script>
         document.addEventListener('DOMContentLoaded', function() {
