--- a/IKS_main.html
+++ b/IKS_main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Definitive IKS Study Guide</title>
+    <title>The Definitive IKS Study Guide (Full-Screen)</title>
     <style>
         body {
             font-family: 'Georgia', 'Times New Roman', serif;
@@ -11,13 +11,14 @@
             color: #1c1c1c;
             background-color: #fdfdfd;
             margin: 0;
-            padding: 25px;
+            padding: 20px; /* Reduced padding for a fuller feel */
         }
         .study-guide-container {
-            max-width: 1100px;
-            margin: 20px auto;
+            /* --- KEY CHANGE FOR FULL SCREEN --- */
+            max-width: 98%; /* Uses almost the full screen width */
+            margin: 10px auto; /* Centered with minimal top/bottom margin */
             background: #ffffff;
-            padding: 30px 50px;
+            padding: 30px 40px;
             border-radius: 10px;
             box-shadow: 0 10px 40px rgba(0, 0, 0, 0.07);
             border-top: 8px solid #FFA500;
@@ -113,7 +114,7 @@
 <body>
 
 <div class="study-guide-container">
-    <h1 class="main-title">The Definitive IKS Study Guide</h1>
+    <h1 class="main-title">The Definitive IKS Study Guide (Full-Screen Edition)</h1>
     <p style="text-align:center; font-style:italic; color:#555;">An exhaustive, detailed breakdown of all concepts for comprehensive understanding and exam mastery.</p>
 
     <!-- MODULE 1 -->
@@ -431,7 +432,6 @@
 
     <hr class="section-divider">
     
-    <!-- NEW FOOTER SECTION -->
     <footer>
         <p>This study guide has been compiled for comprehensive understanding. Best of luck with your exams!</p>
         <p>© 2024 - Your Definitive IKS Resource</p>
