--- a/IKS_main.html
+++ b/IKS_main.html
@@ -134,7 +134,7 @@
 <body>
 
 <div class="study-guide-container">
-    <h1 class="main-title">The Definitive IKS Study Guide (Ultra-Wide Edition)</h1>
+    <h1 class="main-title">The Definitive IKS Study Guide</h1>
     <p style="text-align:center; font-style:italic; color:#555;">An exhaustive, detailed breakdown of all concepts for comprehensive understanding and exam mastery.</p>
 
     <!-- MODULE 1 -->
