--- a/minor2.html
+++ b/minor2.html
@@ -173,7 +173,7 @@
         </div>
     </main>
 
-    <footer><p>Built for the Modern Developer | Happy Hacking!</p></footer>
+    <footer><p>Created & Designed by Pratyush Swain </p></footer>
 
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
     <script>
