--- a/sem2.html
+++ b/sem2.html
@@ -23,7 +23,8 @@
         .header-content { display: flex; justify-content: space-between; align-items: center; }
         .title-container { display: flex; align-items: center; gap: 0.8rem; }
         .title-container .logo { font-size: 2em; color: var(--primary-accent); }
-        header h1 { margin: 0; font-size: 1.75em; color: var(--text-primary); }
+        /* --- MODIFIED --- */
+        header h1 { margin: 0; font-size: 1.4em; color: var(--text-primary); }
         body.dark-mode header h1 { color: var(--text-primary); }
         .header-controls { display: flex; align-items: center; gap: 1rem; }
         .datetime { font-size: 0.9em; text-align: right; color: var(--text-secondary); display: none; }
