--- a/unit3.html
+++ b/unit3.html
@@ -309,7 +309,7 @@
 
     <button id="toTopBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
 
-    <footer><p>The Complete Guide to Python Fundamentals | Crafted for Clarity</p></footer>
+    <footer><p>The Complete Guide to Python Fundamentals | Crafted by Pratyush y</p></footer>
     
     <script>
     document.addEventListener('DOMContentLoaded', () => {
