--- a/unit3.html
+++ b/unit3.html
@@ -84,7 +84,7 @@
 
     <main class="container">
         <article class="content-card">
-            <h2><i class="fas fa-book-open"></i> Python: a detailed..!</h2>
+            <h2><i class="fas fa-book-open"></i> Python: in detailed..!</h2>
             
             <section id="chapter1">
                 <h3><i class="fas fa-flag"></i> Chapter 1: Introduction to Python</h3>
