--- a/minor2.html
+++ b/minor2.html
@@ -102,7 +102,7 @@
         </section>
 
         <div class="tab-navigation reveal">
-            <button class="tab-button active" data-tab="syllabus"><i class="fas fa-list-check"></i>Animated Syllabus</button>
+            <button class="tab-button active" data-tab="syllabus"><i class="fas fa-list-check"></i> Minor-2 Syllabus</button>
             <button class="tab-button" data-tab="questions"><i class="fas fa-file-alt"></i>Pre-Sem Questions</button>
         </div>
 
